2009-11-12  Anantanarayanan G Iyengar  <ananta@chromium.org>

        Reviewed by Adam Barth.
        
        The document-open.html test was flaky at times. The test invokes the layout test plugin
        which in its destroy stream handler opens a new document. This basically tears down the
        stream and the associated plugin instance, which causes a crash when the plugin stream
        dereferences an invalid m_client pointer which points to the PluginView instance which
        is invalid at this time. Fix is to set the m_client pointer to NULL in the stop function
        and check for the same.
       
        https://bugs.webkit.org/show_bug.cgi?id=31067

        * plugins/PluginStream.cpp:
        (WebCore::PluginStream::stop):
        (WebCore::PluginStream::destroyStream):

2009-11-12  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Dimitri Glazkov.

        Renaming some parameters passed to DB-related methods to better
        indicate their purpose.

        https://bugs.webkit.org/show_bug.cgi?id=31449

        * platform/chromium/ChromiumBridge.h:

2009-11-12  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        Transformed reflected elements are clipped inside element with opacity
        https://bugs.webkit.org/show_bug.cgi?id=30957
        
        transparencyClipBox() attemped to minimize the size of the transparency layer by mapping
        each clip rect into painting space before taking the unions. This, however, did not work
        correctly with combinations of reflections and transforms. Fixed by unioning the
        clipRect and mapping through transforms along the way.
        
        Also leave some #ifdeffed code in beginTransparencyLayers() that makes it easy to see
        where the transparency layers are.

        Test: fast/reflections/opacity-reflection-transform.html

        * rendering/RenderLayer.cpp:
        (WebCore::expandClipRectForDescendantsAndReflection):