@@ -39,6 +39,7 @@
 #include <v8.h>
 
 #include <wtf/HashMap.h>
+#include <wtf/RefCounted.h>
 #include <wtf/Vector.h>
 
 namespace WebCore {
@@ -165,6 +166,9 @@ namespace WebCore {
         NPObject* windowScriptNPObject();
 #endif
 
+        // Dummy method to avoid a bunch of ifdef's in WebCore.
+        void evaluateInWorld(const ScriptSourceCode&, DOMWrapperWorld*) { }
+
     private:
         Frame* m_frame;
         const String* m_sourceURL;
@@ -190,6 +194,10 @@ namespace WebCore {
     };
 
     DOMWrapperWorld* mainThreadNormalWorld();
+
+    // Dummy class to avoid a bunch of ifdef's in WebCore.
+    class DOMWrapperWorld : public RefCounted<DOMWrapperWorld> {
+    };
 
 } // namespace WebCore
 
